Nikola auto commit.
Source commit: ?Nikola version: 8.1.3

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ bg-dark
 <p>KCT framework is a set of sotware tools to process computer tomography data. It was founded by Vojtěch Kulvait to support his PostDoc research at University of Magdeburg 2018-2021. Work is focused on processing, manipulating and reconstructing the data from the C-Arm CT systems with a flat panel detector, FDCT. It consists of multiple packages described below.</p>
 <p>These tools are tested and the compatibility will be maintained towards Debian 11 bullseye with AMD64 CPU. After the compilation, command line programs are built, which use command line parser <a href="https://github.com/CLIUtils/CLI11">CLI11</a> to specify inputs, outputs and parameters. BASH scripting is a common practice to put these programs into the CT data processing functional pipelines. </p>
 <h3><a href="https://github.com/kulvait/KCT_cbct">KCT cbct</a></h3>
-<p>Contains C++ and OpenCL implementation of various methods for algebraic CT reconstruction. Use the following <a href="/slug/geometry-model">Geometry model</a>.</p>
+<p>Contains C++ and OpenCL implementation of various methods for algebraic CT reconstruction. Use the following <a href="geometry-model.html">Geometry model</a>.</p>
 <h3><a href="https://github.com/kulvait/KCT_dentk">KCT dentk</a></h3>
 <p>It contains tools written in C++ to process files in the <a href="den-format.html">DEN format</a> to store 3D volume data. Format is derived and compatible with the format reffered as Dennerlein or DEN format.</p>
 <h3><a href="https://github.com/kulvait/KCT_denpy">KCT denpy</a></h3>
