Nikola auto commit.
Source commit: afde6ae3404ebc94218c616079deb4fb55c54bc9
Nikola version: 8.1.3

--- a/archive.html
+++ b/archive.html
@@ -33,8 +33,14 @@ bg-dark
 
         <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="navbar-nav mr-auto">
+<li class="nav-item">
+<a href="categories/using_kct_blog.html" class="nav-link">Using KCT blog</a>
+                </li>
+<li class="nav-item">
+<a href="posts" class="nav-link">Blog posts</a>
+                </li>
 <li class="nav-item active">
-<a href="#" class="nav-link">Archive <span class="sr-only">(active)</span></a>
+<a href="#" class="nav-link">Blog Archive <span class="sr-only">(active)</span></a>
                 </li>
 <li class="nav-item">
 <a href="categories/" class="nav-link">Tags</a>
