--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@ bg-dark
         <div class="collapse navbar-collapse" id="bs-navbar">
             <ul class="navbar-nav mr-auto">
 <li class="nav-item">
-<a href="archive.html" class="nav-link">Archive</a>
+<a href="categories/using_kct_blog.html" class="nav-link">Using KCT blog</a>
+                </li>
+<li class="nav-item">
+<a href="posts" class="nav-link">Blog posts</a>
+                </li>
+<li class="nav-item">
+<a href="archive.html" class="nav-link">Blog Archive</a>
                 </li>
 <li class="nav-item">
 <a href="categories/" class="nav-link">Tags</a>
