Nikola auto commit.
Source commit: 6e99325ce5172d771bf649931060ea5af8835bad
Nikola version: 8.2.0

--- a/den-format.html
+++ b/den-format.html
@@ -93,6 +93,9 @@ bg-dark
 <p><img src="images/DENEXT_header1.svg"></p>
 <p>They are followed by up to 16 dimension specification values.</p>
 <p><img src="images/DENEXT_header2.svg"></p>
+<blockquote>
+<p>Note that when converting DEN files into the numpy arrays, then for 5D file DEN.shape=(dim_5, dim_4, dim_3, dim_2, dim_1) and the dim_5 will correspond to the axis0. This way however from 3D DEN file we get particular frame with dim_3 index k just by using DEN[k] in numpy. Still keep in mind that numpy index convention might also be contraintuitive.</p>
+</blockquote>
 <p>Supported element types and byte sizes are listed in the following Java code from DEN file opener, where the element type ids are in comments:</p>
 <pre class="code literal-block"><span class="kd">public</span> <span class="kd">enum</span> <span class="n">DenDataType</span> <span class="p">{</span>
     <span class="c1">// Ordinal num is the position in the enum</span>
