--- a/archive.html
+++ b/archive.html
@@ -65,8 +65,12 @@ bg-dark
 <article class="listpage"><header><h1>Archive</h1>
     </header><ul class="postlist">
 <li>
+<a href="2023/">2023</a>
+            (1)
+        </li>
+<li>
 <a href="2022/">2022</a>
-            (3)
+            (2)
         </li>
 <li>
 <a href="2021/">2021</a>
